--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -56,10 +56,13 @@
 # core.renderingcache.size=100
 
 #-# [Since 7.2M2]
-#-# Define if the legacy parent/child mechanism is used (for example, to display the hierarchy between documents).
-#-# It has been replaced by the concept of nested documents in XWiki 7.2. This property is for retro-compatibility
-#-# reason. The default value is false.
-# core.useLegacyParentChildMechanism=true
+#-# Define which hierarchy is used between pages (for example inside the breadcrumb).
+#-# Possible values are "reference" (default) or "parentchild".
+#-# If "parentchild" is used, the hierachy is based on the parent/child relationship, which means that any document
+#-# could be defined as the parent of an other document.
+#-# If "reference" is used, then the children of a document must be placed inside this document. It's less flexible but
+#-# more clear.
+# core.hierarchyMode=reference
 
 #-------------------------------------------------------------------------------------
 # Environment
