XWIKI-12267: Refactor import UI tree to use new document tree

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/packagedescriptor.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/packagedescriptor.vm
@@ -1,6 +1,6 @@
 ## Serialize in JSON a XAR package descriptor
 #############################################
-$response.setContentType("application/x-json")
+$response.setContentType("application/json")
 #if("$!request.document" == "")
  #set($packageDoc = $doc)
 #else 
@@ -10,7 +10,7 @@ $response.setContentType("application/x-json")
  #set($error = "No package name was given")
 #else
  #set($attachment = $packageDoc.getAttachment($request.package))
- #if($attachment)
+ #if ($attachment)
   #set($package = $services.xar.getXarPackage($attachment.contentInputStream, true))
   #set($infos = {
       "name" : $package.packageName,
@@ -22,33 +22,6 @@ $response.setContentType("application/x-json")
       "extension": $package.getPackageExtensionId()
     })
 
-  #macro(addPageNode $parentEntities, $pageNode)
-    #set($void = $parentEntities.put($pageNode.reference.name, {}))
-    #foreach($locale in $pageNode.locales)
-      #set($void = $parentEntities.get($pageNode.reference.name).put($locale.locale, $locale))
-    #end
-  #end
-  #macro(addSpaceNode $parentEntities, $spaceNode)
-    #set($void = $parentEntities.put($spaceNode.reference.name, {}))
-    #foreach($child in $spaceNode.children)
-      #set($map = $parentEntities.get($spaceNode.reference.name))
-      #set($newParent = $child)
-      #addNode($map, $newParent)
-    #end
-  #end
-  #macro(addNode $parentEntities, $node)
-    #if ($node.children.isEmpty())
-      #addPageNode($parentEntities, $node)
-    #else
-      #addSpaceNode($parentEntities, $node)
-    #end                      
-  #end
-
-  #set($entities = {})
-  #foreach($node in $services.model.toTree($package.entries).children)
-    #addNode($entities, $node)
-  #end
-
   #set($json = {
       "infos" : $infos,
       "entities" : $services.model.toTree($package.entries)
@@ -56,7 +29,7 @@ $response.setContentType("application/x-json")
 
    $jsontool.serialize($json)
  #else
-  #set($error = "Package not found")
+  #set($error = "XAR package not found")
  #end
 #end
 #if("$!error" != "") {"error":  "$error"} #end
