XWIKI-12267: Refactor import UI tree to use new standard tree

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/packagedescriptor.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/packagedescriptor.vm
@@ -1,4 +1,5 @@
 ## Serialize in JSON a XAR package descriptor
+## @since 7.2M2
 #############################################
 $response.setContentType("application/json")
 #if("$!request.document" == "")
