--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/packageinfo.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/packageinfo.vm
@@ -1,3 +1,4 @@
+##@Deprecated Use packagedescriptor.vm instead
 $response.setContentType("application/x-json")
 #if("$!request.document" == "")
  #set($packageDoc = $doc)
