--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/importer/import.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/importer/import.css
@@ -18,14 +18,6 @@
   margin: -1px 50px 0;
 }
 
-ul {
-  list-style-position: outside !important;
-}
-
-ul.xlist li.xunderline {
-  border: 0 !important;
-}
-
 #attachform .buttonwrapper {
   margin: 0;
 }
@@ -50,9 +42,9 @@ div.loading {
   padding-left: 20px;
 }
 
-#packagelist ul.xlist {
+/*#packagelist ul.xlist {
   margin: 0 !important;
-}
+}*/
 
 #packagelist .xitemcontainer {
   background: transparent url("$xwiki.getSkinFile('icons/silk/package.png')") no-repeat scroll 5px 0.5em;
@@ -143,61 +135,10 @@ div#package div.importOption {
   margin-bottom:5px;
 }
 
-div#package ul.package {
+div#package {
   background-color: $theme.pageContentBackgroundColor;
   border: 1px dotted $theme.borderColor;
-  margin: 0 0 1em 0 !important;
-  padding: 3px !important;
   width: 98%;
-}
-
-ul.package li.xitem div.xitemcontainer span.checkbox,
-ul.package li.xitem div.xitemcontainer input.space {
-  float: right;
-}
-
-ul.package li.xitem div.xitemcontainer {
-  text-indent: 0;
-}
-ul.package li.xitem div.xitemcontainer .spacename:before {
-  content: '\229F';
-  display: inline-block;
-  font-size: 16px;
-  font-weight: 400;
-  height: 16px;
-  margin-right: 20px;
-  text-align: center;
-  width: 16px;
-}
-ul.package li.xitem.collapsed div.xitemcontainer .spacename:before {
-  content: '\229E'
-}
-
-ul.package li.collapsed div.xitemcontainer .pages {
-  display: none;
-}
-
-ul.package li.xitem div.xitemcontainer div.spacename {
-  background: transparent url("$xwiki.getSkinFile('icons/silk/folder.png')") no-repeat scroll 18px .1em;
-  cursor: pointer;
-  float: left;
-  font-weight: bold;
-}
-
-ul.package li.xitem div.xitemcontainer div.selection {
-  color: $theme.textSecondaryColor;
-  float: right;
-  font-size: .8em;
-  line-height: 1.7em;
-  margin-right: .2em;
-}
-
-ul.pages {
-  margin: 0 0 0 18px !important;
-}
-
-ul.pages li.xitem {
-  width: 100%;
 }
 
 .documentName{
