XWIKI-12220: Adapt the breadcrumb to display the document hierarchy based on nested spaces * Make it work even when the Wiki script service is not available (since it's currently optional)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy.vm
@@ -3,7 +3,13 @@
   #######################################################
   ##                     GLOBALS
   #######################################################
-  #set($homeReference = $services.wiki.currentWikiDescriptor.mainPageReference)
+  ## Make sure we get the Main Page Reference whether the Wiki Script Service is available or not (since it's optional)
+  #set($wikiService = $services.wiki)
+  #if("$!wikiService" != '')
+    #set($homeReference = $services.wiki.currentWikiDescriptor.mainPageReference)
+  #else
+    #set($homeReference = $services.model.resolveDocument('', 'default'))
+  #end
   #######################################################
   ##                   CONTROLLER
   ##
