--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/shortcuts.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/shortcuts.vm
@@ -52,3 +52,16 @@
   #xwikibuttonentryend()
   </div>
 #end
+
+###########################################
+##        ADD KEYBOARD SHORTCUTS
+###########################################
+#if ($keyboardShortcutsEnabled)
+  <script type="text/javascript">
+  //<![CDATA[
+    shortcut.add("$services.localization.render('core.shortcuts.view.code')", function() {
+      location.href = $('tmViewSource').href;
+    }, {'type': 'keypress', 'propagate': false, 'disable_in_input': true });
+  //]]>
+  </script>
+#end
