--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/action-menus.less
@@ -9,8 +9,8 @@
     margin-bottom: 0;
   }
   .navbar-header {
+    float: left;
     min-width: percentage((1 / @grid-columns));
-    text-align: center;
   }
   .navbar-brand {
     float: none;
@@ -18,6 +18,20 @@
       height: @navbar-height;
       display: inline;
     }
+  }
+  
+  .navbar-nav {
+    float: right;
+    > li {
+      float: right;
+    }
+  }
+  .navbar-form {
+    margin-left: 0;
+    margin-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    .box-shadow(none);
   }
   @media (max-width: @screen-sm-min) {
     .dropdown-menu .divider {
@@ -31,22 +45,24 @@
     .input-group {
       width: 15em;
     }
+    
+    .btn {
+      margin-bottom: 0;
+    }
   }
 
   .btn {
     border: 1px solid lighten(@btn-primary-bg, 10%);
     box-shadow: none;
     height: @input-height-base;
+    margin-left: -@navbar-padding-horizontal;
+    margin-top: 0;
     &:hover,
     &:focus {
       border: 1px solid lighten(@btn-primary-bg, 10%);
       box-shadow: none;
     }
   }
-}
-
-#contentmenu {
-  .text-right();
 }
 
 @media (min-width: @screen-sm-min) {
@@ -62,14 +78,20 @@
 // Navbar avatar ==========================================================
 
 .navbar-avatar {
-  > img {
-    @avatar-size: 24px;
+  > a > img {
+    @avatar-size: floor(ceil(@navbar-height/2)/2)*2;
     border-radius: @thumbnail-border-radius;
     height: @avatar-size;
-    margin-top: -@navbar-padding-horizontal+@navbar-height/2-@avatar-size/2;
+    margin-top: -@navbar-padding-vertical+@navbar-height/2-@avatar-size/2;
     vertical-align: middle;
     width: @avatar-size;
   }
+}
+
+// Icon in a navbar  ======================================================
+
+.icon-navbar {
+  cursor: pointer;
 }
 
 // Navbar dropdown ========================================================
@@ -160,3 +182,20 @@
     .navbar-dropdown(@navbar-default-bg, @navbar-default-link-hover-bg, @navbar-default-link-active-bg)
   }
 }
+
+// Content menu  ======================================================
+
+#contentmenu {
+  .text-right();
+  
+ .dropdown {
+    display: inline-block;
+    font-size: @font-size-large;
+    width: @font-size-large * 2.5;
+    
+    > a {
+      color: @headings-color;
+    }
+  }
+}
+
