--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/style.less.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/style.less.vm
@@ -11,6 +11,7 @@
 @import "admin";
 @import "annotations";
 @import "buttons";
+@import "drawer";
 @import "edit";
 @import "forms";
 @import "general";
