--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_create.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/menus_create.vm
@@ -10,8 +10,9 @@
 #set ($displayCreateWiki = $isWikiAPIAvailable && $isWikiUIAvailable && $hasCreateWiki)
 #set ($displayCreateSubmenu = $hasCreateSpace || $hasCreatePage || $displayCreateWiki)
 #if ($displayCreateSubmenu)
-  <li><div class="navbar-form navbar-left">
-  #xwikisplitbuttonentrystart($doc.getURL('create') $services.localization.render('core.menu.create') 'tmCreate' 'btn-success' 'plus')
+<li class="dropdown" id="tmCreate">
+  <a aria-expanded="false" href="$doc.getURL('create')" data-toggle="dropdown"><span class="glyphicon glyphicon-plus"></span>  </a>
+  <ul class="dropdown-menu">
   #if ($hasCreatePage)
     #submenuitem($doc.getURL('create') $services.localization.render('core.menu.create.page') 'tmCreatePage', '', 'file')
   #end
@@ -30,7 +31,7 @@
       #submenuitem($officeImporterMainDocument.getURL('view', "&amp;parent=$!{escapetool.url($doc.fullName)}") $services.localization.render('core.menu.create.pageFromOffice') 'tmCreatePageFromOffice', '', 'import')
     #end
   #end
-  #xwikibuttonentryend()
-  </div></li>
+  </ul>
+</li>
 #end
 #end
